# stm32_F030_teamplte

./: CMakeLists.txt  README.RD
CMSIS/: core_cm0.h
doc/: CMake.qch:Zone.Identifier  stm32f0discovery_fw_V1.0.0.zip:Zone.Identifier
fwlibs/src/: stm32f0xx_dac.c
hwlibs/: delay.c  delay.h
src/: main.c
